--- a/dist.ini
+++ b/dist.ini
@@ -12,8 +12,6 @@ copyright_year      = 2010
 [License]
 ;[Readme]
 [ExtraTests]
-[ExecDir]
-[ShareDir]
 [MakeMaker]
 [Manifest]
 [TestRelease]
@@ -22,7 +20,11 @@ copyright_year      = 2010
 [PodWeaver]
 [PkgVersion]
 
-[Prereq]
+[ShareDir]
+[ExecDir]
+dir = scripts
+
+[Prereqs]
 Oogly               = 0.31
 Template            = 0
 Array::Unique       = 0
