rewrote all POD

--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 name                = Dancer-Plugin-DataFu
 author              = Al Newkirk <awncorp@cpan.org>
-version             = 0.0100
+version             = 0.0110
 license             = Perl_5
 copyright_holder    = awncorp
 copyright_year      = 2010
@@ -12,8 +12,6 @@ copyright_year      = 2010
 [License]
 ;[Readme]
 [ExtraTests]
-[ExecDir]
-[ShareDir]
 [MakeMaker]
 [Manifest]
 [TestRelease]
@@ -22,7 +20,11 @@ copyright_year      = 2010
 [PodWeaver]
 [PkgVersion]
 
-[Prereq]
+[ShareDir]
+[ExecDir]
+dir = scripts
+
+[Prereqs]
 Oogly               = 0.31
 Template            = 0
 Array::Unique       = 0
