fixed missing dep

--- a/dist.ini
+++ b/dist.ini
@@ -25,6 +25,7 @@ copyright_year      = 2010
 dir = scripts
 
 [Prereqs]
+Dancer              = 0
 Oogly               = 0.31
 Template            = 0
 Array::Unique       = 0
